--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ canvas {
     
     /* custom */
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     border-radius: 30px;
     
   }
@@ -103,6 +103,8 @@ canvas {
   /* notifications */
   /* The alert message box */
   #notify {
+
+      width: 93%;
     padding: 10px;
     color: white;
     margin-bottom: 15px;
@@ -129,4 +131,12 @@ canvas {
   /* When moving the mouse over the close button */
   .closebtn:hover {
     color: black;
+  }
+
+  .status{
+      width: 96%;
+      height: auto;
+      padding: 5px;
+      border: 2px dashed #aaa;
+      border-radius: 10px;
   }
